cmake_minimum_required(VERSION 3.10)
message("${CMAKE_MODULE_PATH}")
project(Particle_Filter)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
add_subdirectory(src)
add_subdirectory(tests)
